--- a/Blik Mac/GLAMainWindowController.xib
+++ b/Blik Mac/GLAMainWindowController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7702"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLAMainWindowController">
@@ -16,7 +16,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" appearanceType="aqua" frameAutosaveName="Main" animationBehavior="default" id="F0z-JX-Cv5" customClass="GLAMainWindow">
             <windowStyleMask key="styleMask" resizable="YES"/>
-            <windowCollectionBehavior key="collectionBehavior" canJoinAllSpaces="YES"/>
+            <windowCollectionBehavior key="collectionBehavior" canJoinAllSpaces="YES" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" topStrut="YES"/>
             <rect key="contentRect" x="488" y="524" width="520" height="320"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
